The Samba-Bugzilla – Bug 12541
vfs_fruit checks wrong AAPL config state and so always uses readdirattr
Last modified: 2017-02-28 06:59:39 UTC
readdirattr should only be enabled if the client enables it via AAPL negotitiation, not for all clients when vfs_fruit is loaded. This happens because in fruit_readdir_attr() the check if (!config->use_aapl) { return SMB_VFS_NEXT_READDIR_ATTR(handle, fname, mem_ctx, pattr_data); } uses the wrong config state "use_aapl" which is alway true by default. Instead we should use: if (!config->nego_aapl) { return SMB_VFS_NEXT_READDIR_ATTR(handle, fname, mem_ctx, pattr_data); }
Created attachment 12877 [details] Patch for 4.4, 4.5 and 4.6 cherry-picked from master
Comment on attachment 12877 [details] Patch for 4.4, 4.5 and 4.6 cherry-picked from master LGTM.
Reassigning to Karolin for inclusion in 4.6.next, 4.5.next, 4.4.next.
(In reply to Jeremy Allison from comment #3) Pushed to autobuild-v4-{6,5,4}-test.
(In reply to Karolin Seeger from comment #4) Pushed to all branches. Closing out bug report. Thanks!